--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,7 @@
         -->
         <h1>Hello</h1>
         <!-- p: paragraph-->
-        <p>Lorem 10</p>
+        <p>Lorem ipsum 30</p>
         <!--media tag
             img = image
                 src = source
