--- a/HTML/news..html
+++ b/HTML/news..html
@@ -7,12 +7,15 @@
     <title>Story</title>
 </head>
 <body>
-    <ul>
+    <ul type="disc">
     <h1>Võ luyện đỉnh phong</h1>
     <p>Võ đạo đỉnh phong, là cô độc, là tịch mịch, là dài đằng đẵng cầu tác, là cao xử bất thắng hàn
         Phát triển trong nghịch cảnh, cầu sinh nơi tuyệt địa, bất khuất không buông tha, mới có thể có thể phá võ chi cực đạo.
         Lăng Tiêu các thí luyện đệ tử kiêm quét rác gã sai vặt Dương Khai ngẫu lấy được một bản vô tự hắc thư, từ nay về sau đạp vào dài đằng đẵng võ đạo.</p>
      <a href="https://truyentranhaudio.org/truyen-vo-luyen-dinh-phong.html">Link</a>
+     <h2>Bách luyện thành thần</h2>
+     <p>Phasellus convallis, felis at volutpat hendrerit, dui tellus tincidunt turpis, eget ultricies diam tortor id enim. Nunc pretium maximus dignissim. Proin nisi dui, viverra nec mattis id, dignissim eu eros.</p>
+     <a href=""></a>
     </ul>     
 </body>
 </html>
