--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
-        <title>learning HTML</title>
-        <link>
+        <title>HTML Link</title>
     </head>
     <body>
         <!--
@@ -9,9 +8,9 @@
             h1 đến h6
             ctrl + /
         -->
-        <h1>Hello</h1>
+        <h1>HTML: HyperText Markup Language</h1>
         <!-- p: paragraph-->
-        <p>Lorem ipsum 30</p>
+        <p>Tim Berners-Lee invented the first browser at CERN, to enable researchers to share their research with eachother</p>
         <!--media tag
             img = image
                 src = source
@@ -19,7 +18,12 @@
             audio
             video
         -->
-        <img>
+        <a target="_blank" href="http://home.web.cern.ch/topics/birth-web">Read more about the history of HTML
+            <p>
+                <img src="https://www.kasandbox.org/programming-images/misc/tim-berners-lee-webpage.png" width="300">
+                <br/>Image courtesy CERN
+            </p>
+        </a>
         <audio></audio>
         <video></video>
     </body>
