--- a/FormandTable/Order Form.html
+++ b/FormandTable/Order Form.html
@@ -39,14 +39,12 @@
                     </th>
                  </tr>
                  <tr>
-                    <th>Name</th>
+                    <th>Name<span style="color:red">*</span></th>
                  </tr>
                  <tr>
                     <td>
-                        <input  colspan="2" type="text" placeholder="FirstName" required style="width: 100px;">
-                    </td>
-                    <td>
-                        <input  colspan="2" type="text" placeholder="LastName" required style="width: 100px;">
+                        <input type="text" placeholder="FirstName" required size="15"/>
+                        <input type="text" placeholder="LastName" required size="15"/>
                     </td>
                  </tr>
                  <tr>
@@ -54,7 +52,7 @@
                  </tr>
                  <tr>
                     <td colspan="3">
-                        <input type="email" style="width: 250px">
+                        <input type="email" size="35">
                     </td>
                  </tr>
                  <tr>
@@ -62,13 +60,9 @@
                  </tr>
                  <tr>
                     <td>
-                        <input type="tel" style="width: 50px">
-                    </td>
-                    <td>
-                        <input type="tel" style="width: 50px">
-                    </td>
-                    <td>
-                        <input type="tel" style="width: 50px">
+                        <input type="tel" size="5"> -
+                        <input type="tel" size="5"> -
+                        <input type="tel" size="5">
                     </td>
                  </tr>
                  <tr>
