--- a/FormandTable/Form.html
+++ b/FormandTable/Form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="">
-        <table>
+        <table border="1">
             <caption>
                 <h2>General Admission Registration</h2>
             </caption>
