--- a/FormandTable/ThoiKhoaBieu.html
+++ b/FormandTable/ThoiKhoaBieu.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thời Khóa Biểu</title>
+    <link rel="stylesheet" href="CSS/TKB.css">
 </head>
 <body>
     <tr>
         <h2>Thời Khóa Biểu</h2>
     </tr>
     <table border="1">
-        <tbody align="center">
+        <thead>
             <tr>
                 <th width="100px" rowspan="2">Thứ</th>
                 <th colspan="2">Hoạt động</th>
@@ -20,6 +21,8 @@
                 <th width="200px">Sáng</th>
                 <th width="250px">Chiều</th>
             </tr>
+        </thead>
+        <tbody align="center">
             <tr>
                 <td >Thứ 2</td>
                 <td>Thể dục</td>
