--- a/FormandTable/Tablesimple.html
+++ b/FormandTable/Tablesimple.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Table</title>
+    <link rel="stylesheet" href="CSS/css.css">
 </head>
 <body>
     <table border="1">
-        <tbody>
-            <tr>
+        <thead>
+             <tr align="left">
                 <th width="300">Company</th>
                 <th width="200">Contact</th>
                 <th width="100">Country</th>
             </tr>
+        </thead>
+        <tbody>
             <tr>
                 <td>Alfreds Futterkiste</td>
                 <td>Maria Anders</td>
                 <td>Germany</td>
             </tr>
-            <tr>
+            <tr class="dong2">
                 <td>Centro comercial Moctezuma</td>
                 <td>Francisco Chang</td>
                 <td>Mexico</td>
@@ -29,7 +32,7 @@
                 <td>Roland Mendel</td>
                 <td>Austria</td>
             </tr>
-            <tr>
+            <tr class="dong2">
                 <td>Island Trading</td>
                 <td>Helen Bennett</td>
                 <td>UK</td>
@@ -39,7 +42,7 @@
                 <td>Yoshi Tannamuri</td>
                 <td>Canada</td>
             </tr>
-            <tr>
+            <tr class="dong2">
                 <td>Magazzini Alimentari Riuniti</td>
                 <td>Giovanni Rovelli</td>
                 <td>Italy</td>
