--- a/FormandTable/BTForm.html
+++ b/FormandTable/BTForm.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form action="">
-        <table width="500px">
+        <table width="500px" class="table1">
             <tbody>
                 <tr class="red">
                     <th colspan="4">SỞ THÍCH CỦA BẠN</th>
@@ -44,8 +44,89 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" name="submit"></td>
-                    <td><input type="reset" name="reset"></td>
+                    <td><input type="submit" name="submit" value="Gửi thông tin"></td>
+                    <td><input type="reset" name="reset" value="Nhập lại"></td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
+</body>
+</html>
+<br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form>
+        <table class="table2">
+            <thead>
+                <tr>
+                    <th colspan="3" align="left">ĐĂNG KÝ HỌC VIÊN</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td width="100">Họ và tên</td>
+                    <td colspan="2">
+                        <input type="text" name="name">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Ngày sinh</td>
+                    <td colspan="2">
+                        <input type="date" name="date">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Giới tính</td>
+                    <td width="50">
+                        <input type="radio" name="gender">Nam
+                    </td>
+                    <td>
+                        <input type="radio" name="gender">Nữ
+                    </td>
+                </tr>
+                <tr>
+                    <td>Địa chỉ</td>
+                    <td colspan="2">
+                        <textarea cols="50" rows="3"></textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Lớp</td>
+                    <td colspan="2">
+                        <select name="class">
+                            <option value="Chọn lớp">Chọn lớp</option>
+                            <option value="Chọn lớp">10</option>
+                            <option value="Chọn lớp">11</option>
+                            <option value="Chọn lớp">12</option>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td colspan="2">
+                        <input type="email" name="email">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Điện thoại</td>
+                    <td colspan="2">
+                        <input type="tel" name="phone">
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <input type="submit" name="Đăng Ký" value="Đăng ký">
+                    </td>
+                    <td>
+                        <input type="reset" name="reset" value="Nhập lại">
+                    </td>
                 </tr>
             </tbody>
         </table>
