--- a/FormandTable/TKBT0908I.html
+++ b/FormandTable/TKBT0908I.html
@@ -8,27 +8,29 @@
     <link rel="stylesheet" href="CSS/T0908I.css">
 </head>
 <body>
-    <table>
+    <table border="1" width="600px">
         <caption>
-            <h2>THỜI KHÓA BIỂU</h2>
+            <table width="600px">
+                <caption><h1>THỜI KHÓA BIỂU</h1></caption>
+                <tr class="blue">
+                    <td colspan="3">Lớp: T0908I</td>
+                    <td colspan="3" align="right">Thời gian học:13h30-17hh30</td>
+                </tr>
+                <tr class="blue">
+                    <td colspan="3">Giáo viên: KhoaNV</td>
+                    <td colspan="3" align="right">Ngày học: Thứ 3,5,7</td>
+                </tr>
+                <tr class="blue">
+                    <td colspan="6">Phòng học: Class3/Lab3</td>
+                </tr> 
+            </table>       
         </caption>
         <tbody>
-            <tr class="blue">
-                <td colspan="3">Lớp: T0908I</td>
-                <td colspan="3" align="right">Thời gian học:13h30-17hh30</td>
-            </tr>
-            <tr class="blue">
-                <td colspan="3">Giáo viên: KhoaNV</td>
-                <td colspan="3" align="right">Ngày học: Thứ 3,5,7</td>
-            </tr>
-            <tr class="blue">
-                <td colspan="6">Phòng học: Class3/Lab3</td>
-            </tr>
             <tr>
                 <td colspan="3"></td>
-                <th width="100px">Thứ 3</th>
-                <th width="100px">Thứ 5</th>
-                <th width="100px">Thứ 7</th>
+                <th width="100px" class="yellow">Thứ 3</th>
+                <th width="100px" class="yellow">Thứ 5</th>
+                <th width="100px" class="yellow">Thứ 7</th>
             </tr>
             <tr class="cam">
                 <th width="35px" align="center">Tuần</th>
