--- a/FormandTable/BTForm.html
+++ b/FormandTable/BTForm.html
@@ -71,19 +71,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td width="100">Họ và tên</td>
+                    <td width="100" class="blue">Họ và tên</td>
                     <td colspan="2">
                         <input type="text" name="name">
                     </td>
                 </tr>
                 <tr>
-                    <td>Ngày sinh</td>
+                    <td class="blue">Ngày sinh</td>
                     <td colspan="2">
                         <input type="date" name="date">
                     </td>
                 </tr>
                 <tr>
-                    <td>Giới tính</td>
+                    <td class="blue">Giới tính</td>
                     <td width="50">
                         <input type="radio" name="gender">Nam
                     </td>
@@ -92,13 +92,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Địa chỉ</td>
+                    <td class="blue">Địa chỉ</td>
                     <td colspan="2">
                         <textarea cols="50" rows="3"></textarea>
                     </td>
                 </tr>
                 <tr>
-                    <td>Lớp</td>
+                    <td class="blue">Lớp</td>
                     <td colspan="2">
                         <select name="class">
                             <option value="Chọn lớp">Chọn lớp</option>
@@ -108,13 +108,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Email</td>
+                    <td class="blue">Email</td>
                     <td colspan="2">
                         <input type="email" name="email">
                     </td>
                 </tr>
                 <tr>
-                    <td>Điện thoại</td>
+                    <td class="blue">Điện thoại</td>
                     <td colspan="2">
                         <input type="tel" name="phone">
                     </td>
