--- a/FormandTable/formsurvey.html
+++ b/FormandTable/formsurvey.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="CSS/formsurvey.css">
 </head>
 <body>
-    <form>
-        <p>
+    <form action="">
+        <p class="cls_1">
             <b class="H">Market Reseach Survey</b><br>
             Please take a few moments to comp;ete this satisfaction survey
         </p>
@@ -56,7 +56,7 @@
         </p>
         <p>
             <b>What features would you like to see in the new product?</b><br>
-            <textarea cols="125" rows="10"></textarea>
+            <textarea cols="123" rows="10"></textarea>
         </p>
         <p>
             Please rate your level of agreement with the following statements.<br>
