--- a/FormandTable/Banco.html
+++ b/FormandTable/Banco.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco</title>
     <style>
-        td, th{
+        td{
             width: 50px;
             height: 50px;
+        }
+        th{
+            width: 35px;
+            height: 35px;
         }
         form{
             background-color:orange;
             width: 500px;
+            height: 500px;
         }
         table{
             border: solid orange;
