--- a/FormandTable/October.html
+++ b/FormandTable/October.html
@@ -4,77 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>October</title>
+    <link rel="stylesheet" href="CSS/October.css">
 </head>
 <body>
     <form>
-        <table>
-            <caption>Tháng 10-October</caption>
-            <thead>
+        <table id="tb1">
+            <caption><h3>Tháng 10-October</h3></caption>
+            <tbody>
                 <tr>
-                    <th>Chủ Nhật</th>
+                    <th class="red">Chủ Nhật</th>
                     <th>Thứ Hai</th>
                     <th>Thứ Ba</th>
                     <th>Thứ Tư</th>
                     <th>Thứ Năm</th>
                     <th>Thứ Sáu</th>
-                    <th>Thứ Bảy</th>
+                    <th class="blue">Thứ Bảy</th>
                 </tr>
                 <tr>
-                    <td>Sun</td>
+                    <td class="sun">Sun</td>
                     <td>Mon</td>
                     <td>Tue</td>
                     <td>Wed</td>
                     <td>Thu</td>
                     <td>Fri</td>
-                    <td>Sat</td>
+                    <td class="sat">Sat</td>
                 </tr>
-            </thead>
+            </tbody>
+        </table>
+        <table border="1" id="tb2">    
             <tbody>
                 <tr>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>1<sub>13</sub></td>
+                    <td>2<sub>14</sub></td>
+                    <td class="sat">3<sub>15</sub></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="sun">4<sub>16</sub></td>
+                    <td>5<sub>17</sub></td>
+                    <td>6<sub>18</sub></td>
+                    <td>7<sub>19</sub></td>
+                    <td>8<sub>20</sub></td>
+                    <td>9<sub>21</sub></td>
+                    <td class="sat">10<sub>22</sub></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="sun">11<sub>23</sub></td>
+                    <td>12<sub>24</sub></td>
+                    <td>13<sub>25</sub></td>
+                    <td>14<sub>26</sub></td>
+                    <td>15<sub>27</sub></td>
+                    <td>16<sub>28</sub></td>
+                    <td class="sat">17<sub>29</sub></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="sun">18<sub>1.9</sub></td>
+                    <td>19<sub>2</sub></td>
+                    <td>20<sub>3</sub></td>
+                    <td>21<sub>4</sub></td>
+                    <td>22<sub>5</sub></td>
+                    <td>23<sub>6</sub></td>
+                    <td class="sat">24<sub>7</sub></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="sun">25<sub>8</sub></td>
+                    <td>26<sub>9</sub></td>
+                    <td>27<sub>10</sub></td>
+                    <td>28<sub>11</sub></td>
+                    <td>29<sub>12</sub></td>
+                    <td>30<sub>13</sub></td>
+                    <td class="sat">31<sub>14</sub></td>
                 </tr>
             </tbody>
         </table>
