--- a/FormandTable/Tablesimple.html
+++ b/FormandTable/Tablesimple.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/css.css">
 </head>
 <body>
-    <table border="1">
+    <table border="1" style="border-collapse: collapse;">
         <thead>
              <tr align="left">
                 <th width="300">Company</th>
