--- a/FormandTable/Computer.html
+++ b/FormandTable/Computer.html
@@ -6,74 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer</title>
     <style>
-        table {
-            border: 2px solid gray;
-        }
-        thead {
-            height: 50px;
-            margin-top: 30px;
+        table, input {
+            border: 5px solid gray;
         }
         button {
             width: 50px;
             margin: 3px;
             
         }
+        td {
+            background-color: brown;
+        }
     </style>
 </head>
 <body>
     <form>
+        <input type="text" style="width: 415px;height: 30px;" id="view">
         <table>
-            <thead>
-                <th colspan="7">aadghfszh</th>
-            </thead>
             <tbody>
                 <tr>
                     <td><button>Rad</button></td>
                     <td><button>...</button></td>
                     <td><button>x!</button></td>
-                    <td><button>(</button></td>
-                    <td><button>)</button></td>
-                    <td><button>%</button></td>
+                    <td><button type="button" name="btn" value="(" onclick="inputValue(this.value)">(</button></td>
+                    <td><button type="button" name="btn" value=")" onclick="inputValue(this.value)">)</button></td>
+                    <td><button type="button" name="btn" value="%" onclick="inputValue(this.value)">%</button></td>
                     <td><button>AC</button></td>
                 </tr>
                 <tr>
                     <td><button>Inv</button></td>
                     <td><button>sin</button></td>
                     <td><button>In</button></td>
-                    <td><button>7</button></td>
-                    <td><button>8</button></td>
-                    <td><button>9</button></td>
-                    <td><button>/</button></td>
+                    <td><button type="button" name="btn" value="7" onclick="inputValue(this.value)">7</button></td>
+                    <td><button type="button" name="btn" value="8" onclick="inputValue(this.value)">8</button></td>
+                    <td><button type="button" name="btn" value="9" onclick="inputValue(this.value)">9</button></td>
+                    <td><button type="button" name="btn" value="/" onclick="inputValue(this.value)">/</button></td>
                 </tr>
                 <tr>
                     <td><button>pi</button></td>
                     <td><button>cos</button></td>
                     <td><button>log</button></td>
-                    <td><button>4</button></td>
-                    <td><button>5</button></td>
-                    <td><button>6</button></td>
-                    <td><button>*</button></td>
+                    <td><button type="button" name="btn" value="4" onclick="inputValue(this.value)">4</button></td>
+                    <td><button type="button" name="btn" value="5" onclick="inputValue(this.value)">5</button></td>
+                    <td><button type="button" name="btn" value="6" onclick="inputValue(this.value)">6</button></td>
+                    <td><button type="button" name="btn" value="*" onclick="inputValue(this.value)">*</button></td>
                 </tr>
                 <tr>
                     <td><button>e</button></td>
                     <td><button>tan</button></td>
                     <td><button>Căn</button></td>
-                    <td><button>1</button></td>
-                    <td><button>2</button></td>
-                    <td><button>3</button></td>
-                    <td><button>-</button></td>
+                    <td><button type="button" name="btn" value="1" onclick="inputValue(this.value)">1</button></td>
+                    <td><button type="button" name="btn" value="2" onclick="inputValue(this.value)">2</button></td>
+                    <td><button type="button" name="btn" value="3" onclick="inputValue(this.value)">3</button></td>
+                    <td><button type="button" name="btn" value="-" onclick="inputValue(this.value)">-</button></td>
                 </tr>
                 <tr>
                     <td><button>Ans</button></td>
                     <td><button>EXP</button></td>
                     <td><button>^</button></td>
-                    <td><button>0</button></td>
-                    <td><button>.</button></td>
-                    <td><button>=</button></td>
-                    <td><button>+</button></td>
+                    <td><button type="button" name="btn" value="0" onclick="inputValue(this.value)">0</button></td>
+                    <td><button type="button" name="btn" value="." onclick="inputValue(this.value)">.</button></td>
+                    <td><button type="button" name="equal" onclick="result()">=</button></td>
+                    <td><button type="button" name="btn" value="+" onclick="inputValue(this.value)">+</button></td>
                 </tr>
             </tbody>
         </table>
     </form>
+    <script>
+        let view = document.getElementById("view");
+        function inputValue(value) {
+            view.value += value;
+        }
+        function result() {
+        let result = eval(view.value);
+            view.value = result;
+        }
+    </script>
 </body>
 </html>
