--- a/FormandTable/Array/Array1_9.html
+++ b/FormandTable/Array/Array1_9.html
@@ -15,6 +15,7 @@
             b[i] = Math.floor(Math.random() * -100);
         }
         let c = a.concat(b);
+        c.sort(function (a, b) {return a - b});
         document.write('Mảng a: ' + a + '<br/>');
         document.write('Mảng b: ' + b + '<br/>');
         document.write('Mảng c: ' + c);
