--- a/FormandTable/For/Exercise/Exercise_15.html
+++ b/FormandTable/For/Exercise/Exercise_15.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <script>
-        let num = +prompt('Enter your number: ');
-        let total = 0
-        let result = 1
-        for (let i = 1; i <= num; i++) {
-            result = result * i;
-            total = total + result ;
-                
+        let num = +prompt('');
+        let total_1 = 0;
+        let total_2 = 0;
+        let i = 1;
+        while (i <= num) {
+            total_1 = total_1 + i;
+            total_2 = total_2 + 1 / total_1
+            i++;
         }
-        alert(total);
+        alert(total_2)
     </script>
 </body>
 </html>
