--- a/FormandTable/For/Exercise/Exercise_22.html
+++ b/FormandTable/For/Exercise/Exercise_22.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <script>
-        let num = +prompt('Enter your number: ');
-        let total = 0
-        let result = 1
-        for (let i = 1; i <= num; i++) {
-            result = result * i;
-            total = total + result ;
-                
+        let n = +prompt('Nhập số : ');
+        let i;
+        let total = 1;
+        for (i = 1; i <= n; i++) {
+            if (n % i == 0) {
+                total *= i;       
+            }
         }
-        alert(total);
+        document.write(total)
     </script>
 </body>
 </html>
