--- a/FormandTable/If_else_12.html
+++ b/FormandTable/If_else_12.html
@@ -33,7 +33,7 @@
         }
         button {
             padding: 5px 30px;
-            border: 3px solid pink;
+            border: 3px solid hotpink;
             border-radius: 10px;
             font-size: 20px;
         }
